[package]
name = "naijagaz-core"
version = "0.1.0"
edition = "2021"
description = "NaijaGaz business logic — pricing, validation, formatting (pure Rust → Wasm)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.114"

[package.metadata.wasm-pack.profile.release]
# wasm-opt = -O3 (system binaryen via Homebrew). Strips ~50% size.
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
